# calculate_shannon_entropy

./: .gitignore  Cargo.toml
calculate_entropy/: Cargo.toml
calculate_entropy/lib/: Cargo.toml
calculate_entropy/lib/src/: lib.rs  lib_utils.rs
calculate_entropy/lib/src/lib_utils/: struct_helper.rs
calculate_entropy/src/: main.rs  utils.rs
calculate_entropy/src/utils/: calculate_entropy.rs  check_ali_format.rs  get_args.rs  struct_helper.rs  write_entropies.rs
check_alignment/: Cargo.toml
check_alignment/src/: main.rs
