[package]
name = "calculate_entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
threadpool = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
check_fasta = { path = "lib" }

[[bin]]
name = "calculate_entropy"
path = "bin/src/main.rs"